--- a/client/styles/Home.module.css
+++ b/client/styles/Home.module.css
@@ -133,7 +133,7 @@
 
 .chartsGrid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
   gap: 1rem;
 }
 
@@ -147,6 +147,11 @@
 
 .chartCard h3 {
   margin: 0 0 0.5rem;
+}
+
+.chartCanvas {
+  width: 100%;
+  height: 340px;
 }
 
 .error {
