--- a/client/styles/Home.module.css
+++ b/client/styles/Home.module.css
@@ -137,6 +137,12 @@
   gap: 1.25rem;
 }
 
+.landscapeCharts {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(420px, 1fr));
+  gap: 1.25rem;
+}
+
 .chartCard {
   background: #fff;
   border: 1px solid #e2e8f0;
@@ -152,7 +158,11 @@
 
 .chartCanvas {
   width: 100%;
-  height: 300px;
+  height: 240px;
+}
+
+.landscapeCanvas {
+  height: 200px;
 }
 
 .error {
