--- a/client/styles/NationalAverages.module.css
+++ b/client/styles/NationalAverages.module.css
@@ -132,6 +132,12 @@
   fill: #0f172a;
 }
 
+.tileLabelMuted {
+  font-size: 0.7rem;
+  font-weight: 700;
+  fill: #94a3b8;
+}
+
 .legend {
   width: 100%;
   max-width: 380px;
