--- a/client/styles/Home.module.css
+++ b/client/styles/Home.module.css
@@ -667,6 +667,7 @@
   display: flex;
   flex-direction: column;
   gap: 0.75rem;
+  overflow: hidden;
 }
 
 .chartCardHeader {
@@ -859,6 +860,7 @@
 
 .chartBody {
   position: relative;
+  overflow: hidden;
 }
 
 .lineOverlay {
